first draft of full docs - index as the center and all the other pages

--- a/docs_dev/index.html
+++ b/docs_dev/index.html
@@ -65,21 +65,13 @@ hr {
 <div class="banner">
 <img alt="Banner Image" src="banner.jpg"/>
 </div>
-<p>| <a href="https://github.com/BIG-MAP/BattINFO"><img alt="BattINFO Github" src="https://badgen.net/badge/icon/github?icon=github&amp;label"/></a>  | <a href="./about.md"><strong>About</strong></a> | <a href="./contribute.md"><strong>Contribute</strong></a> |</p>
+<p>| <a href="https://github.com/BIG-MAP/BattINFO"><img alt="BattINFO Github" src="https://badgen.net/badge/icon/github?icon=github&amp;label"/></a>  | <a href="./about.html"><strong>About</strong></a> | <a href="./contribute.html"><strong>Contribute</strong></a> |</p>
 <p>The <strong>Batt</strong>ery <strong>IN</strong>ter<strong>F</strong>ace <strong>O</strong>ntology is a digital resource to support interoperability of battery data.   </p>
 <p>BattINFO consists of a list of entities representing concepts used in batteries and electrochemistry. Each entity has a unique identifier (IRI) and is annotated with additional information, such as its preferred name ("prefLabel"), alternative names, definition, references, etc. In addition, the entities are connected via links that make explicit the relation between them, e.g. an ElectrochemicalCell --hasPart--&gt; PositiveElectrode.</p>
 <p>As users link their resources to BattINFO entities, they are effectively describing their resource using a common vocabulary. If the "Corriente" column in a tabular Dataset A, and the "Current" column in a tabular Dataset B, are both connected to the "Current" entity in BattINFO, then users have made explicit that both columns report the same quantity, enven if these quantities are named in different language. </p>
 <p>The same applies to documents, persons, organizations, equipment, samples... anything that has a unique identifier, and is linked to the common vocabulary described in BattINFO, becomes part of an ecosystem of Findable resources.</p>
-<p>about<br/>
-contribute</p>
 <h2>List of Entities</h2>
-<p><a href="./batteries.md"><strong>Batteries</strong></a> <br/>
-<a href="./batteryquantties.md"><strong>Battery Quantities</strong></a><br/>
-<a href="./electrochemistry.md"><strong>Electrochemistry</strong></a><br/>
-<a href="./electrochemicalquantities.md"><strong>Electrochemical Quantities</strong></a></p>
-<h3>To do</h3>
-<ul>
-<li>fix issue with finding the altLabels using SPARQL</li>
-<li>Deploy to HTML and beautify using Bootstrap/Tailwind</li>
-<li>Ancor terms</li>
-</ul></body>
+<p><a href="./batteries.html"><strong>Batteries</strong></a> <br/>
+<a href="./batteryquantities.html"><strong>Battery Quantities</strong></a><br/>
+<a href="./electrochemistry.html"><strong>Electrochemistry</strong></a><br/>
+<a href="./electrochemicalquantities.html"><strong>Electrochemical Quantities</strong></a></p></body>
