--- a/docs_dev/about.html
+++ b/docs_dev/about.html
@@ -1,73 +1,24 @@
-<head><style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 40px auto;
-    max-width: 800px;
-    padding: 0 20px;
-}
 
-.banner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 100%;
-    overflow: hidden;
-}
-
-
-h1, h2, h3 {
-    color: #333;
-}
-
-h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-h2 {
-    font-size: 20px;
-    margin-bottom: 15px;
-}
-
-h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-
-p {
-    line-height: 1.5;
-}
-
-a {
-    color: #007bff;
-}
-
-code {
-    background-color: #f8f8f8;
-    padding: 2px 4px;
-    font-family: Consolas, Monaco, monospace;
-}
-
-blockquote {
-    border-left: 3px solid #333;
-    margin: 0;
-    padding-left: 10px;
-    color: #777;
-}
-
-hr {
-    border: none;
-    border-top: 1px solid #ccc;
-    margin: 20px 0;
-}
-</style></head><body>
-<div class="banner">
-<a href="index.html">
-<img alt="Banner Image" src="banner.jpg"/>
-</a>
-</div>
-<h1>Attributions and credits</h1>
+        <!DOCTYPE html>
+        <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>BattINFO</title>
+                <link rel="stylesheet" type="text/css" href="./css/style.css">
+                <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+        </head>  
+        <body>      
+        
+        <div class="banner">
+            <a href="index.html">
+                <img src="./assets/banner.jpg" alt="Banner Image">
+            </a>
+        </div>
+        <h1>About BattINFO</h1>
+<p>The BattINFO Ontology has been developed as part of the <a href="http://www.big-map.eu/">BIG-MAP</a> project, in an effort to deliver a digital resource the battery community 
+to facilitate the implementation of FAIR data standards.</p>
+<h3>License</h3>
+<p>The Battery Interface Domain Ontology is released under the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution 4.0 International</a> license (CC BY 4.0).</p>
 <h3>Contributors</h3>
 <ul>
 <li>Simon Clark, SINTEF, Norway</li>
@@ -86,9 +37,8 @@ hr {
 <li>Inga Gudem Ringdalen, SINTEF, Norway</li>
 <li>Emanuele Farhi, SOLEIL synchrotron, France</li>
 </ul>
-<h3>Projects</h3>
-<ul>
-<li><a href="http://www.big-map.eu/">BIG-MAP</a>; Grant Agreement No: 957189</li>
-</ul>
-<h2>License</h2>
-<p>The Battery Interface Domain Ontology is released under the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution 4.0 International</a> license (CC BY 4.0).</p></body>
+<h3>Aknowledgements</h3>
+<p>This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 957189.</p>
+            </body>
+        </html>
+        
