--- a/docs_dev/contribute.html
+++ b/docs_dev/contribute.html
@@ -1,73 +1,20 @@
-<head><style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 40px auto;
-    max-width: 800px;
-    padding: 0 20px;
-}
 
-.banner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 100%;
-    overflow: hidden;
-}
-
-
-h1, h2, h3 {
-    color: #333;
-}
-
-h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-h2 {
-    font-size: 20px;
-    margin-bottom: 15px;
-}
-
-h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-
-p {
-    line-height: 1.5;
-}
-
-a {
-    color: #007bff;
-}
-
-code {
-    background-color: #f8f8f8;
-    padding: 2px 4px;
-    font-family: Consolas, Monaco, monospace;
-}
-
-blockquote {
-    border-left: 3px solid #333;
-    margin: 0;
-    padding-left: 10px;
-    color: #777;
-}
-
-hr {
-    border: none;
-    border-top: 1px solid #ccc;
-    margin: 20px 0;
-}
-</style></head><body>
-<div class="banner">
-<a href="index.html">
-<img alt="Banner Image" src="banner.jpg"/>
-</a>
-</div>
-<h1>Contributing to BattINFO</h1>
+        <!DOCTYPE html>
+        <html>
+            <head>
+                <meta charset="UTF-8">
+                <title>BattINFO</title>
+                <link rel="stylesheet" type="text/css" href="./css/style.css">
+                <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+        </head>  
+        <body>      
+        
+        <div class="banner">
+            <a href="index.html">
+                <img src="./assets/banner.jpg" alt="Banner Image">
+            </a>
+        </div>
+        <h1>Contributing to BattINFO</h1>
 <p>There are two ways you can contribute to BattINFO.</p>
 <h3>Suggest minor changes on existing elements</h3>
 <p>Create a <a href="https://docs.github.com/en/issues/tracking-your-work-with-issues/creating-an-issue">Feature request in a Github Issue</a> to suggest edits to names, defintions, references on existing classes and properties. </p>
@@ -75,7 +22,7 @@ hr {
 <blockquote>
 <p><strong><em>NOTE:</em></strong>  We recommend contacting some of BattINFO contributors in advance to discuss which additions deletions you wish to make.  </p>
 </blockquote>
-<p>We recoommend using the <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/forking-workflow">forking workflow</a> to contribute additions/deletions. Fork this repository, clone the fork on you local PC, create your branch based on the existing <code>dev</code> branch (e.g. <code>dev_john_doe</code>) and work on the editions in you local copy. You can edit ontologes in two main ways. One is programmatically, using for instance <a href="https://github.com/emmo-repo/EMMOntoPy">EMMOntoPy</a>. The second and more common is using the interface provided by the Protege software. In case of the latter, <a href="https://protege.stanford.edu/">install Protege</a> and use it to open the ontology file you wish to edit. Before adding elements, ensure Protege is configured to create IRIs in the right format:<br/>
+<p>We recoommend using the <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/forking-workflow">forking workflow</a> to contribute additions/deletions. Fork this repository, clone the fork on you local PC, create your branch based on the existing <code>dev</code> branch (e.g. <code>dev_john_doe</code>) and work on the editions in you local copy. You can edit ontologes in two main ways. One is programmatically, using for instance <a href="https://github.com/emmo-repo/EMMOntoPy">EMMOntoPy</a>. The second and more common is using the interface provided by the Protege software. In case of the latter, <a href="https://protege.stanford.edu/">install Protege</a> and use it to open the ontology file you wish to edit. Before adding elements, ensure Protege is configured to create IRIs in the right format:<br />
 * Open Protégé
 * Go to File/Open and load the ontology file you wish to modify
 * Go to File/Preferences and there go to the New Entities Tab
@@ -83,4 +30,7 @@ hr {
 <ul>
 <li>Once you have made your changes, commit them to your fork and <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request">create a pull request</a>.</li>
 <li>We will merge the request after assessing it.</li>
-</ul></body>
+</ul>
+            </body>
+        </html>
+        
