deploy: ff34c24aed102a2fabc5073f21a69dd1567446b6

--- a/battinfo.html
+++ b/battinfo.html
@@ -50,8 +50,8 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="About the Battery Ontology" href="about.html" />
-    <link rel="prev" title="Examples" href="examples.html" />
+    <link rel="next" title="About the Battery Interface Ontology" href="about.html" />
+    <link rel="prev" title="Example: Zinc Powder from a Supplier" href="example_linked_data_zinc_powder.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -53861,12 +53861,12 @@ b) y and x non-overlapping</td>
     <div class="footer-article-item"><!-- Previous / next buttons -->
 <div class="prev-next-area">
     <a class="left-prev"
-       href="examples.html"
+       href="example_linked_data_zinc_powder.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Examples</p>
+        <p class="prev-next-title">Example: Zinc Powder from a Supplier</p>
       </div>
     </a>
     <a class="right-next"
@@ -53874,7 +53874,7 @@ b) y and x non-overlapping</td>
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">About the Battery Ontology</p>
+        <p class="prev-next-title">About the Battery Interface Ontology</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
