--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="prev" title="JSON-LD Demonstration" href="example_person_jsonld_nb.html" />
+    <link rel="prev" title="About the Battery Interface Ontology" href="about.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -407,12 +407,12 @@ document.write(`
     <div class="footer-article-item"><!-- Previous / next buttons -->
 <div class="prev-next-area">
     <a class="left-prev"
-       href="example_person_jsonld_nb.html"
+       href="about.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">JSON-LD Demonstration</p>
+        <p class="prev-next-title">About the Battery Interface Ontology</p>
       </div>
     </a>
 </div></div>
