--- a/examples.html
+++ b/examples.html
@@ -397,6 +397,10 @@ document.write(`
 </div>
 <a class="sd-stretched-link reference external" href="example_linked_data_custom_battery_cell_metadata.html"></a></div>
 </div>
+</div>
+</div>
+<div class="sd-container-fluid sd-sphinx-override sd-mb-4 docutils">
+<div class="sd-row docutils">
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
 <div class="sd-card-header docutils">
