deploy: f8d29ab62716d5104991088e743ea2ecc12ded3d

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ JSON-LD Playground</label><div class="sd-tab-content docutils">
 <div class="sd-card-body docutils">
 <p class="sd-card-text">A complete list of terms and some human-readable annotations</p>
 </div>
-<a class="sd-stretched-link reference external" href="electrochemistry.html"></a></div>
+<a class="sd-stretched-link reference external" href="battinfo.html"></a></div>
 </div>
 </div>
 </div>
